--- a/package.json
+++ b/package.json
@@ -17,17 +17,11 @@
   },
   "homepage": "https://github.com/sarahemilym/ct-beyond#readme",
   "devDependencies": {
-    "babel-preset-es2015": "^6.24.0",
     "browser-sync": "^2.18.8",
     "gulp": "^3.9.1",
-    "gulp-babel": "^6.1.2",
     "gulp-build": "^0.5.3",
     "gulp-clean-css": "^3.0.4",
-    "gulp-nodemon": "^2.2.1",
     "gulp-sass": "^3.1.0",
-    "gulp-serve": "^1.4.0",
-    "gulp-sourcemaps": "^2.5.0",
-    "gulp-uglify": "^2.1.2",
-    "gulp-webserver": "^0.9.1"
+    "gulp-uglify": "^2.1.2"
   }
 }
